# Computer_Security

./: .gitignore  AUTHORIZATION_COMPLETE.md  DEPLOYMENT.md  MANIFEST.in  README.md  __init__.py  debug_auth.py  generate_passwords.py  generate_ssh_key.py  launch_client.bat  launch_server.bat  launcher.py  main.py  pyproject.toml  requirements.txt  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  start_client.py  start_server.py  test_authorization.py  test_integration.py  test_upload.txt
client/: __init__.py  client.py
data/: dac_owners.csv  mac_labels.json  role_perms.csv  user_roles.json  users.json
server/: __init__.py  auth.py  policy.py  server.py  sftp.py
sftp_root/secret/: flag.txt
tests/: __init__.py  test_policy.py  test_sftp_basic.py
